# klokku-home-assistant-integration

./: README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/: __init__.py
custom_components/klokku/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  select.py  strings.json
custom_components/klokku/translations/: de.json  en.json  es.json  fr.json  pl.json  sv.json
tests/: conftest.py
tests/custom_components/: __init__.py
tests/custom_components/klokku/: __init__.py  test_coordinator.py
