[tool.poetry]
package-mode = false

[project]
name = "klokku-home-assistant-integration"
version = "0.1.1"
description = "Home Assistant integration for Klokku"
authors = [
    {name = "Mariusz Józala"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13.2,<3.14"
dependencies = [
    "homeassistant (>=2025.6.3)",
    "klokku-python-client (==0.2.0)"
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
